# GS_PINO

./: .gitignore  PROJECT.md  README.md  TECH_DOC.md  pyproject.toml
configs/: default.yaml  practical.yaml
scripts/: run_practical.sh  run_smoke.sh
src/gs_pino/: __init__.py  data.py  evaluate.py  generate_dataset.py  geometry.py  losses.py  models.py  solvers.py  train.py
